# Hdf5JavaLib

./: .gitignore  BingSiteAuth.xml  CNAME  Notes.txt  README.md  Read From File.mmd  pom.xml  sitemap.xml  sonar-project.properties  testfile.java
docs/: read.md
hdf5/: notes.txt
hdf5/alltypesexample/: alltypesgpt.cpp  alltypesgrok.cpp  compound_alltypes.cpp  compound_alltypes_nested.cpp  compound_array.cpp  printtypesgpt.cpp  printtypesgrok.cpp  separatetypesgpt.cpp  separatetypesgrok.cpp  tendatasets.cpp  twodatasets.cpp  vlengpt.cpp  vlengrok.cpp
hdf5/bigdecimalmatrix/: weatherdata.cpp
hdf5/cl/: CMakeLists.txt  create_single_int.cpp
hdf5/compoundexamples/: common.cpp  common.h  common_cpp.h  reader.cpp  writer.cpp  writernoattr.cpp
hdf5/dimensions/: array.cpp  dimensions.cpp
hdf5/fixedexamples/: tictactoe.cpp  writescalar.cpp  writevector.cpp
hdf5/floatexamples/: monitoring.cpp
hdf5/olap/: sales_cube.cpp
src/main/resources/: logback.xml
src/test/resources/: all_types_separate.h5  ascii_dataset.h5  compound_example.h5  scalar.h5  tictactoe_4d_state.h5  twenty_datasets.h5  utf8_dataset.h5  vector.h5  vlen_types_example.h5  weatherdata.csv  weatherdata.h5
src/test/resources/h5ex_d/: h5ex_d_alloc.h5  h5ex_d_checksum.h5  h5ex_d_chunk.h5  h5ex_d_compact.h5  h5ex_d_extern.h5  h5ex_d_fillval.h5  h5ex_d_gzip.h5  h5ex_d_hyper.h5  h5ex_d_nbit.h5  h5ex_d_rdwr.h5  h5ex_d_shuffle.h5  h5ex_d_transform.h5  h5ex_d_unlimadd.h5  h5ex_d_unlimgzip.h5  h5ex_d_unlimmod.h5
src/test/resources/h5ex_g/: h5ex_g_compact2.h5  h5ex_g_phase.h5
(+851 files in other folders)
